# rag-demo

./: .gitignore  README.md  index.html  pyproject.toml  secret.yml
rag_demo/: api_server.py  company_info_query_engine.py  query_router.py
tests/: test_company_info_query_engine.py  test_pandas_data_analyzer.py  test_query_router.py
tmp/: faiss_vectorstore.pkl
