[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["test <test@gmail.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "rag_demo"}
]


[tool.poetry.dependencies]
python = "^3.9"
faiss-cpu = "^1.8.0"
langchain = "^0.2.5"
openai = "^1.35.3"
langchain-community = "^0.2.5"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.9"
langchain-experimental = "^0.0.61"
tabulate = "^0.9.0"
flask = "^3.0.3"
flask-cors = "^4.0.1"
pandas = "^2.2.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rag_demo --cov-report=html --cov-fail-under=50"
